[package]
name = "topdown"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8"
rand = "0.8"
bevy-inspector-egui = "0.12.1"
bevy_ecs_tilemap = "0.7"
bevy_ecs_ldtk = "0.4"



[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

[profile.dev.package."*"]
opt-level = 3