[package]
name = "cavetest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10"
rand = "0.8"
bevy-inspector-egui = "0.18"



[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

[profile.dev.package."*"]
opt-level = 3